      Configurable default connection collation (RFE #1025969).
    * css/phpmyadmin.css.php, libraries/auth/cookie.auth.lib.php: Use
      fieldsets on login form (RFE #1364546), use notice box for cookie
      information.
    * libraries/display_select_lang.lib.php,
      libraries/auth/cookie.auth.lib.php: Use fieldset for language selection.

2005-11-22 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * added test/theme.php: for testing themes
    * phpinfo.php:
      - respect only $GLOBALS['cfg']['ShowPhpInfo']
      - minimum include
    * libraries/common.lib.php
      - merged two server array checks
      - dont exit if user config loading failed
      - dont exit with invalid server index
      - use file_get_contents() or file() if not present
      - removed wrong error message
      - check if $cfg['ServerDefault'] is in $cfg['Servers'] before usning it

2005-11-21 Michal Čihař  <michal@cihar.com>
    * libraries/import/sql.php: Fix query splitting in some cases (reported by
      Marc).
    * libraries/common.lib.php, lang/*: Translate message that has been
      ignored for 2.7.0 release.
    * libraries/common.lib.php: Make code more redable, default to MySQL 5.0
      documentation as it is latest stable version.
    * main.php, libraries/select_server.lib.php,
      libraries/auth/cookie.auth.lib.php: Escape verbose server name (bug
      #1362671).
    * index.php: Avoid XSS on HTTP_HOST.

2005-11-20 Marc Delisle  <lem9@users.sourceforge.net>
    ### 2.7.0-rc1 released
    * many files: $dbh becomes $controllink for better contrast with $userlink

2005-11-20 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * libraries/common.lib.php::PMA_showMySQLDocu()
      - undefined constant (if server connection fails)
    * libraries/select_theme.lib.php
      - undefined variable (if server connection fails)

2005-11-18 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/database_interface.lib.php: initialize in case there are